Bug 160773 - SVG: Nothing is displayed
Summary: SVG: Nothing is displayed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-04-22 09:11 UTC by Xisco Faulí
Modified: 2024-06-10 11:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-04-22 09:11:53 UTC
Steps to reproduce:
1. Open attachment 192483 [details] from bug 159661

-> At least the red rectangle should be displayed. Text missing is bug 159661

Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e902fe1b8bf03f9c3747685314f4d443bcea9333
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-04-22 09:12:40 UTC
Regression introduced by:

author	Mike Kaganski <mike.kaganski@collabora.com>	2024-04-16 10:48:06 +0500
committer	Mike Kaganski <mike.kaganski@collabora.com>	2024-04-20 11:28:34 +0200
commit cc3663bbaed4f65d64154e5f9abb51a5f622f710 (patch)
tree b364a63443222b6690a5ec1359f12cb2d7c8fa0a
parent cfa9990d470b10548c7fed64eb1182fea11d41e0 (diff)
tdf#160702: improve text positioning

Bisected with: bibisect-linux64-24.8
Comment 2 Mike Kaganski 2024-04-22 09:48:43 UTC
https://gerrit.libreoffice.org/c/core/+/166425

And after this, bug 159661 gets fixed (because commit cc3663bbaed4f65d64154e5f9abb51a5f622f710 actually fixed it, except for this little oversight).
Comment 3 Commit Notification 2024-04-22 14:30:33 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8a97f1ba8d9ccb65b2c89106de20666311d90c30

tdf#160773: handle 0-size font height

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2024-04-22 16:58:03 UTC
Verified in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 851f60697d32849454528e5f14ed80446b330e0c
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: es-ES
Calc: threaded

@Mike, thanks for fixing this issue!!
Comment 5 Commit Notification 2024-04-23 12:05:56 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/98935eef13c7d755221d79fe7d3c5869a40a7c37

tdf#159661, tdf#160773: svgio: Add unittest

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-05-03 16:27:33 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/14c7b4249e822c218f912fcd3707226081363f7a

tdf#160773: handle 0-size font height

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-05-06 13:45:17 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/b2dc48571714a84b1eeff127e86c07b29b579e43

tdf#159661, tdf#160773: svgio: Add unittest

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.